fixed scrolling spacing bug

--- a/src/index.css
+++ b/src/index.css
@@ -46,6 +46,7 @@ body{
   background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
   margin-left: 10vw;
   margin-top: 10vh;
+
 }
 
 .add-btn{
@@ -74,7 +75,7 @@ body{
   width:100vw;
   height: 100vh;
 
-   
+
 }
 
 .rotated-Div {
@@ -89,8 +90,42 @@ body{
 }
 
 
-
 .rotated-H1{
   color: red;
   font-size: 45vh;
+}
+
+.customHeader{
+}
+
+.formWrapper{
+  display: block;
+  align-items: center;
+  justify-content: center;
+  height:50vh;
+  width:77vw;
+}
+
+.inputHeader{
+  text-align:center;
+
+}
+
+.speedHeader{
+  text-align:center;
+  margin-bottom: 0;
+}
+
+.speedDiv{
+  display: inline-block;
+  margin-top: 0;
+}
+
+.speedSelect{
+  display: inline-block;
+}
+
+
+.submitBtn{
+  margin:2vh;
 }
